[project]
name = "semantic-prompt-search-api"
version = "0.1.0"
description = "Semantic search applicaiton for prompts"
authors = [
    {name = "singh-anshuman",email = "anshumansingh137@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
